--- a/style.css
+++ b/style.css
@@ -1,13 +1,155 @@
+html {
+position: relative;
+min-height: 100%;
+}
+
 body {
-    background-color: #3A3B3C;
-    font-size: 48px;
+background-color: cornsilk;
+line-height: 1.6;
+margin-bottom: 100px;
+
 }
 
 button {
-    gap: 56px;
-    padding: 8px;
-    background: none;
-    outline: none;
-    cursor: pointer;
-    font-size: 84px;
+border: none;
+color: inherit;
+font-family: inherit;
+font-size: inherit;
+cursor: pointer;
+outline: none;
+}
+
+.header {
+display: flex;
+justify-content: center;
+padding: 40px 0px;
+background-color: rgb(236, 193, 112);
+}
+
+.title {
+font-size: 32px;
+}
+
+.main {
+margin-top: 40px;
+text-align: center;
+}
+
+.scoreboard {
+margin-bottom: 15px;
+}
+
+.score-info {
+font-size: 32px;
+}
+
+.score-message {
+font-size: 20px;
+margin-bottom: 15px;
+}
+
+.scores-container {
+display: flex;
+align-items: center;
+justify-content: space-between;
+max-width: 400px;
+padding: 10px;
+margin: 0 auto;
+}
+
+.score-box {
+width: 170px;
+}
+
+.score {
+margin-top: 10px;
+margin-bottom: 20px;
+font-size: 22px;
+font-weight: bold;
+}
+
+.buttons {
+display: flex;
+align-items: center;
+justify-content: center;
+gap: 30px;
+}
+
+.btn {
+border-radius: 10px;
+background-color: wheat;
+}
+
+.btn-square {
+width: 160px;
+height: 160px;
+}
+
+.btn:hover {
+background-color: rgb(209, 183, 135);
+}
+
+.btn:active {
+background-color: rgb(221, 165, 60);
+transition: 400ms;
+}
+
+.sign {
+font-size: 80px;
+margin-bottom: 10px;
+}
+
+.footer{
+font-size: 24px;
+display: flex;
+align-items: center;
+justify-content: center;
+padding: 16px;
+margin-top: 18px;
+}
+
+.modal {
+position: fixed;
+z-index: 1;
+top: 50%;
+left: 50%;
+width: 300px;
+padding: 30px;
+border-radius: 10px;
+background-color: rgb(248, 194, 94);
+text-align: center;
+font-size: 30px;
+user-select: none;
+transform: translate(-50%, -50%) scale(0);
+transition: 200ms ease-in-out;
+}
+
+.modal.active {
+transform: translate(-50%, -50%) scale(1);
+}
+
+.modal-title {
+font-size: 40px;
+font-weight: bold;
+}
+
+.btn-restart {
+padding: 10px 20px;
+margin-top: 25px;
+margin-bottom: 15px;
+}
+
+.overlay {
+display: none;
+position: fixed;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+background-color: black;
+opacity: 0.6;
+}
+
+.overlay.active {
+display: block;
 }
